@@ -11,14 +11,14 @@ AUX clamd.conf 234 RMD160 b517b05e587637cbdd443f7ca3625d582e32722f SHA1 564b1e2f
 AUX clamd.rc 2847 RMD160 883fcfeec1c5da6d3478c8591e0381265b8ded5b SHA1 93bc09b2c81c23f8fd6134c54882b070ddffdabb SHA256 f245a57ac69f3f3c51381f958a23f0fd9941744ec6a262767d0d4f2414af10e9
 DIST clamav-0.97.4.tar.gz 48386114 RMD160 a8da7621d6c8bce05adf2521f082b3e5e94dd9e1 SHA1 56f90cf8a73acba8f97beca86b42c65c3923935d SHA256 958dd09c9da9ceb50c9e556b3ced9cbdf40e836d2bdc98286ce96e84fd4a5a53
 DIST clamav-0.97.tar.gz 41834871 RMD160 bc37a2da03c1d8923da9f28a7e051f6e67db8603 SHA1 68f5a6736b3f67d608c4064ef839777877f09115 SHA256 ec5d88303c0a6e1d8e1354b68ae8c184faee7989aac11dfacff466d9e0471932
-EBUILD clamav-0.97.4.ebuild 4094 RMD160 bcac1983873c1a0f3b8126af1dc987fd87457ff3 SHA1 17159016c9db8e39556d69eaefe85113be42ca84 SHA256 33f60dac1229e082124e90ac03e466500fcc4a6c7adffb1eed925c2b8d0fe383
+EBUILD clamav-0.97.4.ebuild 4143 RMD160 8d9fdef8a21b87f2fa5e0d662a86b9e4c6b262b4 SHA1 df474d9f145ee01b41c0924a09e607d344c1901b SHA256 e805bd4b6dbacdd0fc146eeaea4f325e315fd7f04144540ea5848ba4ca766906
 EBUILD clamav-0.97.ebuild 4210 RMD160 c4ac186e21c0493f7382ce0ac39c6034a298a294 SHA1 cfcd92f3d9efbecf065a5b5920fbc52493757286 SHA256 d8333ed07a9897b52521627ba77643524b3891923ec5587578126d174a472abb
-MISC ChangeLog 61077 RMD160 bfc6773e4c072059c6ddee626fd1e2036f85b0da SHA1 da182f261193ab42166772d7162aabc25b8ed4df SHA256 fe1cf37d2aed67e87a6e1a0d071578bc0bea8de07df624c6fbf523c821f72248
+MISC ChangeLog 61377 RMD160 ef3faf96d29175e98acce8281e33099ac91d0d1b SHA1 3af460f7820f5a8b763ea91eee06516a0113242c SHA256 2b75ec1a0e1f5dce5d03c1b2d3af0247e0120174cd1aa940108007c9388a8f93
 MISC metadata.xml 320 RMD160 3546393e30d87f0b0a2fb17e2f15f57dd8c19661 SHA1 b959e38933418e6fc818ed40cd9a4921b8c66102 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+09F8ACgkQX3X2B8XHTokqXACfT6fPOvRdC1On5UYQijKxnn75
-UMwAmQH1i7NpeEkkpz1tb65k+jPpBJY1
-=UP3u
+iEYEARECAAYFAk/LL1MACgkQX3X2B8XHTonRBwCggc3C99lD7mpWX6kKenSetGnD
+PV0AnjRtGCw1fBobIctL2aagojebx1W7
+=v9f8
 -----END PGP SIGNATURE-----
