@@ -1,10 +1,10 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/clamav-0.97.4.ebuild,v 1.2 2012/05/02 20:14:11 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/clamav-0.97.4.ebuild,v 1.4 2012/05/31 15:44:58 radhermit Exp $
 
 EAPI=4
 
-inherit eutils autotools-utils flag-o-matic prefix
+inherit eutils autotools-utils flag-o-matic user prefix
 
 DESCRIPTION="Clam Anti-Virus Scanner"
 HOMEPAGE="http://www.clamav.net/"
@@ -31,7 +31,9 @@ RESTRICT="test"
 
 DOCS=( AUTHORS BUGS ChangeLog FAQ INSTALL NEWS README UPGRADE )
 
-PATCHES=( "${FILESDIR}"/${PN}-0.97-nls.patch
+PATCHES=(
+	"${FILESDIR}"/${PN}-0.97-nls.patch
+	"${FILESDIR}"/${PN}-0.97.4-gcc47.patch
 	"${FILESDIR}"/${PN}-0.92.1-interix.patch
 	"${FILESDIR}"/${PN}-0.93-prefix.patch
 )
